Refactor Database, Analyzer, and Post classes for improved readability and consistency in field naming